2011-03-14  Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* Fix #17583: ALTER TABLE fails during update of tx_dam (Thanks Tobias Schaefer)
	* Feature #17530: Enable full stdWrap in tx_dam_tsfe::fetchFileList() (Thanks Francois Suter)

2011-03-05  Dan Osipov <dosipov@phillyburbs.com>
	* Follow up to #17379: dam is not linkvalidator aware: Added manual section.
	* Added feature #14009: Feature: Enable secure downloads for DAM files (Thanks Francois Suter)
	* Update ext_emconf.php following release of 1.2.1

2011-02-27  Dan Osipov <dosipov@phillyburbs.com>
	* Added feature #17379: dam is not linkvalidator aware (Thanks Michael Miousse)

2011-01-26  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #9777: Usability issues with the DAM media browser (Thanks Lorenz Ulrich)
	* Fix #16964: Adjust backend layout to TYPO3 4.5
	* Fix #15078: Add TSConfig documentation
	* Update ext_emconf.php following release of 1.2.0

2011-01-26  Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* Fix #17322: DBctrl Icons are not floating

2011-01-25  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #10408: No replacement of special characters after upload in non-UTF-8-installations (Thanks Lorenz Ulrich)
	* Fix #15342: Call to deprecated function in class.tx_dam_tcefunc.php (Thanks Lorenz Ulrich)
	* Fix #16297: htmlArea RTE: Unable to create links if DAM is installed.

2011-01-23  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #17218: Media>List>Process doesn't work in 1.1 branch and trunk (Thanks Lorenz Ulrich)

2011-01-22  Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* Fix #10318: DAM > Info crashes on larger installs (Thanks to Thorsten Kahler)

2011-01-22  Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* Added feature #15005: browsetree -> folders: Use natcasesort for folder sorting (Thanks to Christian Kuhn)

2011-01-22  Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* Fix #16896: Term Web>File in extension configuration is outdated (Thanks to Chris Mueller)

2011-01-22  Dan Osipov <dosipov@phillyburbs.com>